# bioStat

./: .gitmodules  CMakeLists.txt  README.md  makefile
FGStest/src/: CMakeLists.txt  Main.cpp  Main.h
PDTest/src/: CMakeLists.txt  Main.cpp  Main.h
bioCC/src/: CMakeLists.txt  Calc.cpp  Calc.h  DefRegions.cpp  DefRegions.h  bioCC.cpp  bioCC.h
bioinfoBasic/: Data.cpp  Data.h  DataInFile.cpp  DataInFile.h  TxtFile.cpp  TxtFile.h  common.cpp  common.h
bioinfoBasic/bam/: BGZF.cpp  BGZF.h  BamAux.h  BamReader.cpp
callDist/src/: CMakeLists.txt  callDist.cpp  callDist.h
fqStatN/src/: CMakeLists.txt  fqStatN.cpp  fqStatN.h
scr/: biostat.cpp
scr/biocc/: bioCC.cpp
scr/common/: Data.cpp
scr/fqstatn/: def.h  fqStatN.h
scr/fragdist/: def.h  fragDist.cpp  fragDist.h
scr/readdens/: def.h
scr/valign/: vAlign.cpp
src/: CMakeLists.txt  biostat.cpp
src/bam/: BamAux.h  BamReader.h
src/biocc/: Calc.cpp  Calc.h  bioCC.cpp  bioCC.h  def.h
src/calldist/: callDist.cpp  callDist.h  def.h
src/common/: Data.cpp  Data.h  TxtFile.cpp  TxtFile.h  common.cpp
src/fqstatn/: def.h  fqStatN.cpp
src/fragdist/: def.h  fragDist.cpp  fragDist.h
src/readdens/: readDens.cpp  readDens.h
src/valign/: def.h  vAlign.cpp  vAlign.h
vAlign/src/: CMakeLists.txt  vAlign.cpp  vAlign.h
